fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -137,14 +137,18 @@ header img{
     }
 
     .main img{
-        width: 80%;
-        max-width: 630px;
+        width: 100%;
     }
 
     .main h2{
         margin-top: 0;
-        font-size: 2.1em;
+        font-size: 3em;
     }
+
+    .main p{
+        font-size: 1.2em;
+    }
+    
     .main h2, .main p{
         text-align: left;
         padding-left: 0;
@@ -153,9 +157,12 @@ header img{
     .content{
         align-items: flex-start;
         margin-top: 2.5em;
-        margin-left: 1.9em;
+        margin-left: 3em;
     }
 
+    .content p{
+        padding-right: 6em;
+    }
     .socials{
         justify-content: flex-end;
         margin-right: 2em;
